# Config_SPMT

./: .gitignore  CMakeLists.txt  README.md  setup.sh
Config_SPMT/: IPBUS_GCU_config.h  Redis.h  config.h  readout.h
cfg/: DAQ_RunNumber.txt  connections.xml  gcuspmt.xml  htmlConfig.txt
cfg/cfg_PM/: DAQ_Config.txt  DAQ_Config_1.txt  DAQ_Config_cp.txt
src/: IPBUS_GCU_config.cpp  Redis.cpp  config.cpp  main.cpp  readout.cpp  test.cpp.bak
